force-app/main/default/objects/Product_Catalog__c/Product_Catalog__c.object-meta.xml
<CustomObject>
    <label>Product Catalog</label>
    <nameField>
        <label>Product Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Catalogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>