force-app/main/default/objects/Product_Catalog__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Product Catalogs</relationshipLabel>
    <relationshipName>Product_Catalogs</relationshipName>
    <type>Lookup</type>
</CustomField>