force-app/main/default/objects/Product_Catalog__c/fields/Enrollment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Fee__c</fullName>
    <label>Enrollment Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>